# advent2025

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
python/advent2025/: __init__.py  day1.py  day10.py  day12.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  run_all_days.py
src/: lib.rs
src/days/: day1.rs  day10.rs  day11.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
tests/: test_day1.py  test_day10.py  test_day12.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py
