[package]
name = "advent2025"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "advent2025"
crate-type = ["cdylib"]
doc-test = false

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[dependencies]
cached = "0.54.0"
pyo3 = "0.23.0"
regex = "1.11.1"
tempfile = "3.14.0"
